--- a/MicroRabbit/MicroRabbit.Banking.API/appsettings.json
+++ b/MicroRabbit/MicroRabbit.Banking.API/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionStrings": { "BankingDbConnection": "Data Source=LMENZIM;Initial Catalog=BankingDb;Integrated Security=True;Pooling=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=False;" },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
