Refactor RabbitMQ Bus for Dependency Injection for parameterless constructors in our Event Handlers

--- a/MicroRabbit/MicroRabbit.Transfer.Api/appsettings.json
+++ b/MicroRabbit/MicroRabbit.Transfer.Api/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "ConnectionStrings": { "TransferDbConnection": "Data Source=LMENZIM;Initial Catalog=TransferDb;Integrated Security=True;Pooling=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=False;" },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
